--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,3 +2,13 @@
   font-weight: bold;
   text-decoration: underline;
 }
+
+header {
+  background-color: black;
+  color: white;
+  padding: 10px;
+
+  h1 {
+    margin: 0;
+  }
+}
