--- a/src/routes/UserViewer/components/UserViewer.scss
+++ b/src/routes/UserViewer/components/UserViewer.scss
@@ -1,3 +1,28 @@
+.button-success,
+.button-error,
+.button-warning,
+.button-secondary {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.button-success {
+    background: rgb(28, 184, 65); /* this is a green */
+}
+
+.button-error {
+    background: rgb(202, 60, 60); /* this is a maroon */
+}
+
+.button-warning {
+    background: rgb(223, 117, 20); /* this is an orange */
+}
+
+.button-secondary {
+    background: rgb(66, 184, 221); /* this is a light blue */
+}
+
 .user-viewer {
   display: flex;
 }
@@ -27,5 +52,14 @@
 
   legend > button {
     margin-left: 10px;
+  }
+
+  .form-controls {
+    text-align: right;
+
+    button {
+      margin-top: 10px;
+      margin-right: 10px;
+    }
   }
 }
